Infrastructure/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: supervision-dev
  labels:
    name: supervision-dev
    environment: azure
