Infrastructure/k8s/allow-cert-manager-solver.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cert-manager-solver
  namespace: supervision-dev

spec:
  podSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: "true"

  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx

    ports:
    - protocol: TCP
      port: 8089
